== 1.3.6 released 2008-10-08

* Fixed bug when duping or cloning to copy over instance vars instead of method values
* Fixed bug with older versions of ActiveRecord and creating an alias method change on find in AssociationCollection
* Added modifiers: upper, lower, trim, ltrim, rtrim

== 1.3.5 released 2008-10-08

* Since joins are now strings, AR doesn't know how to merge them properly. So searchgasm now checks which joins to skip over to avoid conflicts.

== 1.3.4 released 2008-10-07

* Fixed method names creation for conditions with modifiers
* Create local column conditions, incase there are method conflicts. Such as "id".
* All joins are switched to left outer joins. When search with *any* conditions, inner joins return incorrect results. Also when ordering by an association that allows for blanks, inner joins exclude the records with blank values. Only option is left outer joins.
* If joins is manually set with a string, treat it as SQL, just like ActiveRecord

== 1.3.3 released 2008-10-03

* Fixed modifiers being double escaped on equals condition
* Fixed bug when merging conditions with array substitutions
* Updated blank condition to check if the values is false or not
* Fixed type for the year modifier in the mysql adapter

== 1.3.2 released 2008-10-03

* Fixed condition to type cast all values in an array
* Fixed bug to properly set the type for the type cast column
* Fixed bug to allow conditions on local columns
* Apparently ActiveRecord 2.2 doesnt remove duplicates on all joins, need to enforce this for ALL versions of ActiveRecord
* Fixed bug when passing a symbol as the SQL type for condition return types